# blackmagic

./: CMakeLists.txt
cross-file/: native.ini
src/include/: platform_support.h
